--- a/Wireframe_LuciaAndreu/index.html
+++ b/Wireframe_LuciaAndreu/index.html
@@ -8,13 +8,30 @@
   <link rel="stylesheet" href="styles/styleIndex.css">
 </head>
 <body>
+
+    <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-pink sticky-top shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold text-white" href="#">Comedor Escolar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menú</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <div class="container-fluid p-0">
     <div class="row g-0">
       
-      <!-- PANEL IZQUIERDO -->
+      <!-- iquierda -->
       <div class="col-md-6 left-panel d-flex flex-column justify-content-between">
         <div class="top-section">
-          <button class="btn btn-outline-light mb-3 ms-3 mt-3">☰ Menú</button>
           <h1 class="text-center fw-bold logo-text">IES SERPIS</h1>
         </div>
         <div class="bottom-section text-center text-white">
@@ -22,7 +39,7 @@
         </div>
       </div>
 
-      <!-- PANEL DERECHO -->
+      <!-- derecha -->
       <div class="col-md-6 d-flex justify-content-center align-items-center bg-light">
         <div class="login-box shadow-lg p-4 rounded bg-white">
           <h3 class="text-center mb-3 fw-semibold">Inicio Sesión</h3>
