--- a/Wireframe_LuciaAndreu/contacto.html
+++ b/Wireframe_LuciaAndreu/contacto.html
@@ -5,57 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto con los padres</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="contacto.css">
+  <link rel="stylesheet" href="styles/styleContacto.css">
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-pink sticky-top shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Comedor Escolar</a>
+      <a class="navbar-brand fw-bold text-white" href="#">Comedor Escolar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menú</a></li>
+          <li class="nav-item"><a class="nav-link active text-white" href="#">Contacto</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Formulario -->
+  <!-- formulario -->
   <div class="container my-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <h2 class="text-center text-primary mb-4">Formulario de Contacto</h2>
-        <form class="border p-4 bg-light rounded shadow-sm">
+        <h2 class="text-center text-pink mb-4">Formulario de Contacto</h2>
+        <form class="border p-4 bg-white rounded shadow-sm">
           <div class="mb-3">
-            <label class="form-label">Nombre del alumno</label>
+            <label class="form-label text-pink">Nombre del alumno</label>
             <input type="text" class="form-control" placeholder="Introduce el nombre">
           </div>
           <div class="mb-3">
-            <label class="form-label">Correo electrónico de los padres</label>
+            <label class="form-label text-pink">Correo electrónico</label>
             <input type="email" class="form-control" placeholder="correo@ejemplo.com">
           </div>
           <div class="mb-3">
-            <label class="form-label">Mensaje</label>
-            <textarea class="form-control" rows="4" placeholder="Escribe tu mensaje aquí"></textarea>
+            <label class="form-label text-pink">Mensaje</label>
+            <textarea class="form-control" placeholder="Escribe tu mensaje aquí"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Enviar</button>
+          <button type="submit" class="btn w-100 bg-yellow text-dark fw-semibold">Enviar</button>
         </form>
       </div>
     </div>
   </div>
 
-  <!-- Pie -->
-  <footer class="bg-primary text-white text-center py-3">
-    <p class="mb-1">© 2025 Colegio IES Serpis - Todos los derechos reservados</p>
+  <!-- pie -->
+  <footer class="bg-pink text-white text-center py-3">
+    <p class="mb-1">© 2025 Colegio IES Serpis</p>
     <div>
-      <a href="#" class="text-white me-3">Facebook</a>
       <a href="#" class="text-white me-3">Instagram</a>
+      <a href="#" class="text-white me-3">Facebook</a>
       <a href="#" class="text-white">Twitter</a>
     </div>
   </footer>
